2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events.build_table.php: Improve instructions
	in list and details view on agents and fix the bug of doesnt 
	show the owner in the list table when events are grouped. To fix
	it I added a couple of subqueries to the grouped query. Yes, I 
	checked the performance :) Bug: 3607097

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: fixed the apply format to
	numeric value in the max item report.
	
	MERGE FROM THE BRANCH PANDORA_4

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed the get
	modules from items events for reports in metaconsole.
	
	Fixes: #3606284
	
	* include/functions_agents.php, operation/tree.php,
	operation/agentes/ver_agente.php: some fixes for avoid PHP
	warnings.

2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events.build_table.php: Fixed the owner info
	in wrong column of event view for bug 3607097

	Fixed a problem changing the owner when change status too

2013-03-07  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.build_table.php: Added carriage
	return support in Instructions column in events view

2013-03-07  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_view_services.php,
	include/help/ja/help_field_match_snmp.php,
	include/help/ja/help_snmp_alert_field1.php: Updated help.

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_servers.php
	operation/agentes/estado_generalagente.php: Order
	code and little fix

	* operation/events/events.build_table.php
	godmode/events/custom_events.php: Add Instructions to
	custom columns in event view to bug 3607062

2013-03-06  Dario Rodriguez <dario@artica.es>

	* operation/agentes/ver_agente.php: Adapted to new way to detect