@@ -118,6 +118,7 @@ ALTER TABLE "tplanned_downtime" ADD COLUMN "periodically_day_to" SMALLINT defaul
 ALTER TABLE "tplanned_downtime" ADD COLUMN "type_downtime" VARCHAR( 100 ) NOT NULL default 'disabled_agents_alerts';
 ALTER TABLE "tplanned_downtime" ADD COLUMN "type_execution" VARCHAR( 100 ) NOT NULL default 'once';
 ALTER TABLE "tplanned_downtime" ADD COLUMN "type_periodicity" VARCHAR( 100 ) NOT NULL default 'weekly';
+ALTER TABLE "tplanned_downtime" ADD COLUMN "id_user" varchar(100) NOT NULL default '0';
 
 -- -----------------------------------------------------
 -- Table "tplanned_downtime_agents"
